--- a/ansible/002-basic_usage/basic_playbook.yaml
+++ b/ansible/002-basic_usage/basic_playbook.yaml
@@ -10,4 +10,10 @@
     # Running the Ping module as the first task (a test to see if it can ssh to each host)
     ping: 
 
-Exercise - Run the ping module on each of the VMS you've created
+# Run ansible with ansible-playbook -v -i inventory.yaml playbook.yaml
+# ansible-playbook = command
+# -v = verbose (logs more stuff)
+# -i <inventory to specify> = specifying the inventory.yaml
+# playbook.yaml = the playbook you're running
+
+# Exercise - Run the ping module on each of the VMS you've created
