--- a/docker-compose/trio-task/db/Dockerfile
+++ b/docker-compose/trio-task/db/Dockerfile
@@ -6,8 +6,8 @@ FROM mysql:5.7.35
 # Add a database and root password
 # For hints on how to do this, consult the mysql 5.7 image documentation
 
-ENV MYSQL_ROOT_PASSWORD=secret_pw
-ENV MYSQL_DATABASE=flask-db
+# ENV MYSQL_ROOT_PASSWORD=secret_pw
+# ENV MYSQL_DATABASE=flask-db
 
 
 # Add the content of the .sql file to your image
